--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
                 <div class="banner-content">
                     <!--Banner Text-->
-                    <h1 class="mb-20">Cục <span> Đá</span></h1>
+                    <h1 class="mb-20">Ngọc <span>Thạch</span></h1>
 
                     <!--Animated Text-->
                     <p class="cd-headline clip is-full-width">
