--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="author" content="Ngọc Thạch" />
 
     <!--Page Title-->
-    <title>Ngọc Thạch</title>
+    <title>Rosicky Alime </title>
 
     <meta proeperty="og:url" content="https://sauanla.com/" />
     <meta property="og:site_name" content="Tôi là Stones" />
@@ -37,7 +37,7 @@
     <script src="js/modernizr.js"></script>
 
     <!--Favicons-->
-    <link rel="shortcut icon" href="img/favicon-phucnd.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/ngocthach.ico" type="image/x-icon">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
 
@@ -372,7 +372,7 @@
                         <!--Contact Info Item-->
                         <div class="col-md-4 info-item">
                             <span class="icon"><i class="fas fa-phone"></i></span>
-                            <h5>(+84) 86 264 8911/h5>
+                            <h5>(+84) 86 264 8911</h5>
                         </div>
 
                     </div>
