--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
                                             class="lnr lnr-home"></i></span>Home </a> </li>
                             <li><a href="#about" class="pt-link"><span class="nav-menu-icon"><i
                                             class="lnr lnr-user"></i></span>About Me</a></li>
-                            <!-- <li><a href="#resume" class="pt-link"><span class="nav-menu-icon"><i class="lnr lnr-license"></i></span>Resume</a></li>
+                             <li><a href="#resume" class="pt-link"><span class="nav-menu-icon"><i class="lnr lnr-license"></i></span>Resume</a></li>
                                 <li><a href="#portfolio" class="pt-link"><span class="nav-menu-icon"><i class="lnr lnr-briefcase"></i></span>Portfolio</a></li>
-                                <li><a href="#blog" class="pt-link"><span class="nav-menu-icon"><i class="lnr lnr-book"></i></span>Blog</a></li> -->
+                                <li><a href="#blog" class="pt-link"><span class="nav-menu-icon"><i class="lnr lnr-book"></i></span>Blog</a></li>
                             <li><a href="#contact" class="pt-link"><span class="nav-menu-icon"><i
                                             class="lnr lnr-envelope"></i></span>Contact</a></li>
                         </ul>
